--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.1
-boto3==1.18.88
-janome==0.4.1
-wordcloud==1.8.1
-matplotlib==3.4.3
-requests==2.26.0
+Flask
+boto3
+janome
+wordcloud
+matplotlib
+requests
